msg: don't truncate message sequence to 32-bits

Message sequence is 64-bits number, but the upper 32-bits get lost
when setting/getting message sequence. This causes messenger to
malfunction after receiving 1^32 messages

Fixes: http://tracker.ceph.com/issues/16122
Signed-off-by: Yan, Zheng <zyan@redhat.com>
(cherry picked from commit d52832d498e2364a38f49bad67d300f0773f889d)

Conflicts:
	src/msg/async/AsyncConnection.h (hammer uses in_seq_acked
                                         instead of ack_left)